--- a/style2.css
+++ b/style2.css
@@ -11,9 +11,12 @@
     cursor: pointer;
     box-shadow: 5px 5px 5px gray;
     border-radius: 5px;
+    height: 80%;
+    /* display: none; */
 }
 .menu-layout:hover{
     border: 3px solid lightsalmon;
+   
 }
 
 #main-chart{
