--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-/* body {
-    background: url(images/bg-image.jpg) no-repeat;
-    background-size: cover;
-    height: 100vh;
-} */
-
 .menu-layout{
     margin: 0 20px;
     border: 1px solid lightsalmon;
@@ -12,7 +6,6 @@
     box-shadow: 5px 5px 5px gray;
     border-radius: 5px;
     height: 80%;
-    /* display: none; */
 }
 .menu-layout:hover{
     border: 3px solid lightsalmon;
@@ -34,3 +27,5 @@
     margin-bottom: 40px;
     box-shadow: 5px 5px 5px lightslategray;
 }
+
+/* End */
